--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,16 @@
 /* GLOBAL VARIABLES */
 :root {
   --font: "Roboto", sans-serif;
-  --fontOrigin: 1rem;     /* 16px */
-  --fontSmall: 0.625em;   /* 10px */
-  --fontMedium: 0.875em;  /* 14px */
-  --fontNormal: 1em;      /* 16px */
-  --fontLarge:  1.375em;  /* 22px */
+  --fontOrigin: 1rem;
+  /* 16px */
+  --fontSmall: 0.625em;
+  /* 10px */
+  --fontMedium: 0.875em;
+  /* 14px */
+  --fontNormal: 1em;
+  /* 16px */
+  --fontLarge: 1.375em;
+  /* 22px */
   --fontLight: 100;
   --fontRegular: 400;
   --speed: 0.65s;
@@ -15,6 +20,7 @@
   from {
     object-position: 0 50%;
   }
+
   to {
     object-position: 100% 50%;
   }
@@ -25,6 +31,7 @@
     -webkit-transform: scale(1, 1);
     transform: scale(1, 1);
   }
+
   to {
     -webkit-transform: scale(1.5, 1.5);
     transform: scale(2, 2);
@@ -50,7 +57,7 @@ body {
 
 .wrapper {
   display: grid;
-  grid-template-columns: repeat( auto-fit, 1fr );
+  grid-template-columns: repeat(auto-fit, 1fr);
   grid-template-rows: auto;
   grid-template-areas:
     "menu menu menu"
@@ -98,6 +105,7 @@ body {
 .menu__item:hover {
   color: rgba(150, 150, 255, 1);
 }
+
 .menu__item.active {
   color: rgba(100, 100, 250, 1);
 }
@@ -220,8 +228,8 @@ body {
 }
 
 .card:hover .card__profile img {
-  -webkit-transform: scale(1, 1)  translateZ(0);
-  transform: scale(1, 1)  translateZ(0);
+  -webkit-transform: scale(1, 1) translateZ(0);
+  transform: scale(1, 1) translateZ(0);
 }
 
 .card__body {
